--- a/reserve.html
+++ b/reserve.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Star Wars - Express</title>
+  <title>Reservation Page</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
@@ -13,10 +13,15 @@
 
   <div class="container">
     <div class="jumbotron">
-      <h1>Star Wars Express</h1>
-      <h3>The greatest resource in the galaxy for Star Wars statistics!</h3>
+      <h1 class="text-center"><span class="glyphicon glyphicon-fire"></span> Hot Restaurant</h1>
       <hr>
-      <a href="/"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-eye-open"></span> View Characters</button></a>
+      <h2 class="text-center">Make Your Reservation</h2>
+      <br>
+      <div class="text-center">
+      <a href="/tables"><button type="button" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
+      <a href="/"><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-home"></span>
+      </button></a>
+    </div>
     </div>
     <div class="row">
 
@@ -24,7 +29,7 @@
 
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><strong>Add Characters</strong></h3>
+            <h3 class="panel-title">Table Reservation</h3>
           </div>
           <div class="panel-body">
             <form method="POST" role="form">
@@ -35,49 +40,70 @@
               </div>
 
               <div class="form-group">
-                <label for="role">Role</label>
+                <label for="role">Phone Number</label>
                 <input type="text" class="form-control" id="role">
               </div>
 
               <div class="form-group">
-                <label for="age">Age</label>
+                <label for="age">Email</label>
                 <input type="text" class="form-control" id="age">
               </div>
 
               <div class="form-group">
-                <label for="force-points">Force Points</label>
+                <label for="force-points">Unique ID</label>
                 <input type="text" class="form-control" id="force-points">
               </div>
 
             </form>
-            <br>
-            <div class="text-right">
-              <button type="submit" class="btn btn-primary btn-md" id="add-btn"><span class="glyphicon glyphicon-fire"></span> Add to the Force</button>
+            <div class="text-left">
+              <button type="submit" class="btn btn-primary btn-md" id="add-btn"> Submit</button>
             </div>
           </div>
         </div>
 
+          <footer class="footer">
+            <div class="container">
+              <p><a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API Wait List</a></p>
+            </div>
+          </footer>
       </div>
     </div>
   </div>
 
   <script type="text/javascript">
-    // Question: What does this code do?
-    $("#add-btn").on("click", function(event) {
-      event.preventDefault();
-      var newCharacter = {
-        name: $("#name").val().trim(),
-        role: $("#role").val().trim(),
-        age: $("#age").val().trim(),
-        forcePoints: $("#force-points").val().trim()
+    $(".submit").on("click", function() {
+      // Here we grab the form elements
+      var newReservation = {
+        customerName: $("#reserve_name").val().trim(),
+        phoneNumber: $("#reserve_phone").val().trim(),
+        customerEmail: $("#reserve_email").val().trim(),
+        customerID: $("#reserve_uniqueID").val().trim()
       };
-
-      // Question: What does this code do??
-      $.post("/api/new", newCharacter)
-      .done(function(data) {
-        console.log(data);
-        alert("Adding character...");
-      });
+      console.log(newReservation);
+      // This line is the magic. It"s very similar to the standard ajax function we used.
+      // Essentially we give it a URL, we give it the object we want to send, then we have a "callback".
+      // The callback is the response of the server. In our case, we set up code in api-routes that "returns" true or false
+      // depending on if a tables is available or not.
+      // Here we get the location of the root page.
+      // We use this instead of explicitly saying the URL is localhost:3001 because the url will change when we deploy.
+      var currentURL = window.location.origin;
+      $.post(currentURL + "/api/tables", newReservation,
+        function(data) {
+          // If a table is available... tell user they are booked.
+          if (data) {
+            alert("Yay! You are officially booked!");
+          }
+          // If a table is available... tell user they on the waiting list.
+          else {
+            alert("Sorry you are on the wait list");
+          }
+          // Clear the form when submitting
+          $("#reserve_name").val("");
+          $("#reserve_phone").val("");
+          $("#reserve_email").val("");
+          $("#reserve_uniqueID").val("");
+        });
+      return false;
     });
   </script>
 
